# qtai

./: Cargo.toml  LICENSE  README.md
src/: collections.rs  config.rs  config_edit.rs  main.rs  run.rs
